Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10580

lfsck-performance test_7c test failed: BUG: unable to handle kernel NULL pointer IP: [<ffffffffa088d709>] lfsck_namespace_repair_dirent+0x89/0xc30 [lfsck] Oops

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.11.0
    • None
    • None
    • 3
    • 9223372036854775807

      [ 2223.387601] BUG: unable to handle kernel NULL pointer dereference at (null)
      [ 2223.390040] IP: [<ffffffffa088d709>] lfsck_namespace_repair_dirent+0x89/0xc30 [lfsck]
      [ 2223.390040] PGD 0
      [ 2223.390040] Oops: 0000 1 SMP
      [ 2223.390040] Modules linked in: osp(OE) mdd(OE) lod(OE) mdt(OE) lfsck(OE) mgs(OE) mgc(OE) osd_ldiskfs(OE) lquota(OE) fid(OE) fld(OE) ksocklnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) ldiskfs(OE) libcfs(OE) rpcsec_gss_krb5 nfsv4 dns_resolver nfs fscache ppdev pcspkr virtio_balloon parport_pc i2c_piix4 parport nfsd auth_rpcgss nfs_acl lockd grace sunrpc ip_tables ext4 mbcache jbd2 ata_generic pata_acpi virtio_net virtio_blk cirrus syscopyarea sysfillrect sysimgblt drm_kms_helper ttm ata_piix drm serio_raw virtio_pci virtio_ring virtio i2c_core libata floppy [last unloaded: libcfs]
      [ 2223.390040] CPU: 0 PID: 30004 Comm: lfsck_namespace Tainted: G OE ------------ 3.10.0-327.36.3.x3.1.121.x86_64 #1
      [ 2223.390040] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2007
      [ 2223.390040] task: ffff8800d4b38000 ti: ffff8800b857c000 task.ti: ffff8800b857c000
      [ 2223.390040] RIP: 0010:[<ffffffffa088d709>] [<ffffffffa088d709>] lfsck_namespace_repair_dirent+0x89/0xc30 [lfsck]
      [ 2223.390040] RSP: 0018:ffff8800b857fb68 EFLAGS: 00010246
      [ 2223.390040] RAX: 0000000000000000 RBX: ffff880096744660 RCX: 0000000000000000
      [ 2223.390040] RDX: ffff8800b301b400 RSI: ffffffffa08d5c20 RDI: ffff880096744660
      [ 2223.390040] RBP: ffff8800b857fc50 R08: ffff88003551ab24 R09: ffff88003551ab24
      [ 2223.390040] R10: 0000000000000ac6 R11: 00000000000fffff R12: ffff8800ad917800
      [ 2223.390040] R13: ffff8800b1701a00 R14: ffff8800b70f1000 R15: ffff880096744660
      [ 2223.390040] FS: 0000000000000000(0000) GS:ffff88011fc00000(0000) knlGS:0000000000000000
      [ 2223.390040] CS: 0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      [ 2223.390040] CR2: 0000000000000000 CR3: 0000000036656000 CR4: 00000000000006f0
      [ 2223.390040] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [ 2223.390040] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
      [ 2223.390040] Stack:
      [ 2223.390040] 0cffffffa036ffa2 ffff8800ab851280 ffff8800b046c000 0000000000000000
      [ 2223.390040] ffff8800ab851280 ffff880114eea098 ffffffffa036fee9 ffff8800b857fc08
      [ 2223.390040] ffffffffa068b3b5 ffff880096744660 ffff8800b6d0b200 0000000000000048
      [ 2223.390040] Call Trace:
      [ 2223.390040] [<ffffffffa036fee9>] ? cfs_hash_spin_unlock+0x9/0x10 [libcfs]
      [ 2223.390040] [<ffffffffa068b3b5>] ? lu_object_find_at+0x95/0x290 [obdclass]
      [ 2223.390040] [<ffffffffa068b9df>] ? lu_object_find_slice+0x1f/0x90 [obdclass]
      [ 2223.390040] [<ffffffffa0892f90>] lfsck_namespace_assistant_handler_p1+0x700/0x1f40 [lfsck]
      [ 2223.390040] [<ffffffff81013588>] ? __switch_to+0xf8/0x4b0
      [ 2223.390040] [<ffffffffa08782ae>] lfsck_assistant_engine+0x3de/0x20a0 [lfsck]
      [ 2223.390040] [<ffffffff810c1aa6>] ? dequeue_entity+0x106/0x520
      [ 2223.390040] [<ffffffff816399c8>] ? __schedule+0x2d8/0x900
      [ 2223.390040] [<ffffffff810b8950>] ? wake_up_state+0x20/0x20
      [ 2223.390040] [<ffffffffa0877ed0>] ? lfsck_master_engine+0x1300/0x1300 [lfsck]
      [ 2223.390040] [<ffffffff810a5b8f>] kthread+0xcf/0xe0
      [ 2223.390040] [<ffffffff810a5ac0>] ? kthread_create_on_node+0x140/0x140
      [ 2223.390040] [<ffffffff81644f58>] ret_from_fork+0x58/0x90
      [ 2223.390040] [<ffffffff810a5ac0>] ? kthread_create_on_node+0x140/0x140
      [ 2223.390040] Code: ff 48 85 c0 49 89 c6 0f 84 56 09 00 00 49 8b 45 00 f6 05 02 bf af ff 01 48 c7 45 b8 00 00 00 00 48 89 85 78 ff ff ff 48 8b 45 90 <4c> 8b 38 48 8b 45 a8 48 8b 40 68 48 89 45 98 4c 8b a0 30 01 00
      [ 2223.390040] RIP [<ffffffffa088d709>] lfsck_namespace_repair_dirent+0x89/0xc30 [lfsck]

            wc-triage WC Triage
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: